# bayes_xai

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
conf/: model.yaml
data/: NSH_clear.csv
frontend/: index.html  nginx.conf  package-lock.json
frontend/src/: App.css  App.tsx  index.css
notebooks/: data_modelling.ipynb
src/esitmator/: bayes_estimator.py
src/models/: patient_record.py  pyro_model.py
src/preprocessing/: preprocessor.py
src/scripts/: fit_model.py
src/server/: Dockerfile  lifespan.py  routes.py  schemas.py  server.py
