[project]
name = "bayes-xai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.8.3",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "matplotlib>=3.10.8",
    "numpyro>=0.20.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
